--- a/reddit_clone_pp/Home.storyboard
+++ b/reddit_clone_pp/Home.storyboard
@@ -12,7 +12,7 @@
         <!--Home-->
         <scene sceneID="Iia-wK-2g5">
             <objects>
-                <viewController id="flc-Cy-FjA" sceneMemberID="viewController">
+                <viewController id="flc-Cy-FjA" customClass="HomeViewController" customModule="reddit_clone_pp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Inw-a7-eJj"/>
                         <viewControllerLayoutGuide type="bottom" id="m2J-bh-Mzz"/>
@@ -22,36 +22,102 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="J0O-fU-F6z">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="E6a-Nu-aWS">
-                                    <size key="itemSize" width="360" height="50"/>
+                                    <size key="itemSize" width="370" height="110"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="NPU-il-Jdu">
-                                        <rect key="frame" x="7.5" y="0.0" width="360" height="50"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="redditTopicCellID" id="NPU-il-Jdu" customClass="HomeTopicCollectionViewCell" customModule="reddit_clone_pp" customModuleProvider="target">
+                                        <rect key="frame" x="2.5" y="0.0" width="370" height="110"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="360" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="370" height="110"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Community" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xXH-jf-Y7F">
+                                                    <rect key="frame" x="12" y="6" width="64.5" height="14.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" red="0.84875440599999996" green="0.1007887274" blue="0.24704633649999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cEY-Bg-6U3">
+                                                    <rect key="frame" x="7" y="79" width="30" height="26"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="26" id="JSJ-wv-zan"/>
+                                                        <constraint firstAttribute="width" constant="30" id="zv6-km-6wg"/>
+                                                    </constraints>
+                                                    <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <state key="normal" image="up"/>
+                                                    <connections>
+                                                        <action selector="upvoteAction:" destination="NPU-il-Jdu" eventType="touchUpInside" id="kOW-wO-Aez"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ubi-cu-Lug">
+                                                    <rect key="frame" x="103.5" y="79" width="26" height="26"/>
+                                                    <state key="normal" image="down"/>
+                                                    <connections>
+                                                        <action selector="downvoteAction:" destination="NPU-il-Jdu" eventType="touchUpInside" id="1cy-08-FsY"/>
+                                                    </connections>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Num" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MwP-EA-XQA">
+                                                    <rect key="frame" x="57" y="85" width="26.5" height="14.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Text" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0yK-cf-Eol">
+                                                    <rect key="frame" x="12" y="28.5" width="32.5" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </view>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="MwP-EA-XQA" firstAttribute="leading" secondItem="cEY-Bg-6U3" secondAttribute="trailing" constant="20" id="5aR-2n-MG8"/>
+                                            <constraint firstItem="Ubi-cu-Lug" firstAttribute="leading" secondItem="MwP-EA-XQA" secondAttribute="trailing" constant="20" id="85f-px-c0F"/>
+                                            <constraint firstItem="MwP-EA-XQA" firstAttribute="centerY" secondItem="cEY-Bg-6U3" secondAttribute="centerY" id="JwF-zF-Nq2"/>
+                                            <constraint firstItem="0yK-cf-Eol" firstAttribute="top" secondItem="xXH-jf-Y7F" secondAttribute="bottom" constant="8" id="UBw-ad-B2k"/>
+                                            <constraint firstItem="Ubi-cu-Lug" firstAttribute="centerY" secondItem="cEY-Bg-6U3" secondAttribute="centerY" id="cLt-Y2-lr5"/>
+                                            <constraint firstItem="0yK-cf-Eol" firstAttribute="leading" secondItem="NPU-il-Jdu" secondAttribute="leading" constant="12" id="cry-xw-5Gg"/>
+                                            <constraint firstAttribute="bottom" secondItem="cEY-Bg-6U3" secondAttribute="bottom" constant="5" id="ebm-2Z-vZn"/>
+                                            <constraint firstItem="xXH-jf-Y7F" firstAttribute="top" secondItem="NPU-il-Jdu" secondAttribute="top" constant="6" id="hrj-8C-l72"/>
+                                            <constraint firstItem="xXH-jf-Y7F" firstAttribute="leading" secondItem="NPU-il-Jdu" secondAttribute="leading" constant="12" id="msB-Ma-WDa"/>
+                                            <constraint firstItem="cEY-Bg-6U3" firstAttribute="leading" secondItem="NPU-il-Jdu" secondAttribute="leading" constant="7" id="uks-Gf-iDU"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="communityLabel" destination="xXH-jf-Y7F" id="7XI-5J-cSS"/>
+                                            <outlet property="downvoteButton" destination="Ubi-cu-Lug" id="qCW-Rd-MBo"/>
+                                            <outlet property="textLabel" destination="0yK-cf-Eol" id="AyR-yJ-p0c"/>
+                                            <outlet property="upvoteButton" destination="cEY-Bg-6U3" id="sY5-x1-fHJ"/>
+                                            <outlet property="upvotesLabel" destination="MwP-EA-XQA" id="otM-1v-hC2"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="flc-Cy-FjA" id="zNR-rv-PUb"/>
+                                    <outlet property="delegate" destination="flc-Cy-FjA" id="d8M-Fv-FUJ"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="m2J-bh-Mzz" firstAttribute="top" secondItem="J0O-fU-F6z" secondAttribute="bottom" id="2p0-IG-MGL"/>
+                            <constraint firstItem="J0O-fU-F6z" firstAttribute="top" secondItem="Inw-a7-eJj" secondAttribute="bottom" id="C1t-er-ySc"/>
                             <constraint firstItem="J0O-fU-F6z" firstAttribute="leading" secondItem="eVr-4W-hKL" secondAttribute="leading" id="KY6-Pd-YLE"/>
                             <constraint firstAttribute="trailing" secondItem="J0O-fU-F6z" secondAttribute="trailing" id="SkY-nk-Z88"/>
-                            <constraint firstItem="J0O-fU-F6z" firstAttribute="top" secondItem="eVr-4W-hKL" secondAttribute="top" id="ejh-SJ-zBb"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" image="home" id="M5v-z9-DzT"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="homeCV" destination="J0O-fU-F6z" id="3Wj-B6-pSh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="u0r-o0-q3P" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -59,6 +125,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="down" width="26" height="26"/>
         <image name="home" width="25" height="25"/>
+        <image name="up" width="26" height="26"/>
     </resources>
 </document>
