--- a/reddit_clone_pp/Base.lproj/Main.storyboard
+++ b/reddit_clone_pp/Base.lproj/Main.storyboard
@@ -19,16 +19,6 @@
             </objects>
             <point key="canvasLocation" x="689" y="-257"/>
         </scene>
-        <!--Search-->
-        <scene sceneID="aAt-2x-FWA">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Search" id="d2T-pI-kx1" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="icc-be-gGu"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qsS-JP-brV" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="726" y="-161"/>
-        </scene>
         <!--NewTopic-->
         <scene sceneID="Tlm-fF-LSD">
             <objects>
@@ -40,19 +30,9 @@
             <point key="canvasLocation" x="726" y="-32"/>
         </scene>
         <!--Profile-->
-        <scene sceneID="bz9-Wj-5OR">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Profile" id="R6m-ri-y0Y" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="hBY-mC-Hkw"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="sNh-cW-vFe" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="647" y="82"/>
-        </scene>
-        <!--Message-->
         <scene sceneID="azO-BE-Ec4">
             <objects>
-                <viewControllerPlaceholder storyboardName="Message" id="Fv1-g4-Ist" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="Profile" id="Fv1-g4-Ist" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="Eu2-w1-kX8"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4D6-dF-unO" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -73,9 +53,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="6BJ-XH-OvY" kind="relationship" relationship="viewControllers" id="Icp-qr-iYb"/>
-                        <segue destination="d2T-pI-kx1" kind="relationship" relationship="viewControllers" id="bm9-g4-HmD"/>
                         <segue destination="z5z-cF-Vwf" kind="relationship" relationship="viewControllers" id="iWV-lF-Z8W"/>
-                        <segue destination="R6m-ri-y0Y" kind="relationship" relationship="viewControllers" id="k3r-sU-1e4"/>
                         <segue destination="Fv1-g4-Ist" kind="relationship" relationship="viewControllers" id="2Gn-ax-cvi"/>
                     </connections>
                 </tabBarController>
