--- a/reddit_clone_pp/Home.storyboard
+++ b/reddit_clone_pp/Home.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -57,15 +58,21 @@
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ubi-cu-Lug">
-                                                    <rect key="frame" x="103.5" y="79" width="26" height="26"/>
+                                                    <rect key="frame" x="104.5" y="79" width="26" height="26"/>
                                                     <state key="normal" image="down"/>
                                                     <connections>
                                                         <action selector="downvoteAction:" destination="NPU-il-Jdu" eventType="touchUpInside" id="1cy-08-FsY"/>
                                                     </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Num" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MwP-EA-XQA">
-                                                    <rect key="frame" x="57" y="85" width="26.5" height="14.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <rect key="frame" x="57" y="85" width="27.5" height="14.5"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="userID: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y7o-qM-1En">
+                                                    <rect key="frame" x="296.5" y="85.5" width="40.5" height="13.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -82,10 +89,12 @@
                                             <constraint firstItem="MwP-EA-XQA" firstAttribute="leading" secondItem="cEY-Bg-6U3" secondAttribute="trailing" constant="20" id="5aR-2n-MG8"/>
                                             <constraint firstItem="Ubi-cu-Lug" firstAttribute="leading" secondItem="MwP-EA-XQA" secondAttribute="trailing" constant="20" id="85f-px-c0F"/>
                                             <constraint firstItem="MwP-EA-XQA" firstAttribute="centerY" secondItem="cEY-Bg-6U3" secondAttribute="centerY" id="JwF-zF-Nq2"/>
+                                            <constraint firstItem="y7o-qM-1En" firstAttribute="centerY" secondItem="MwP-EA-XQA" secondAttribute="centerY" id="S5r-P4-7Mx"/>
                                             <constraint firstItem="0yK-cf-Eol" firstAttribute="top" secondItem="xXH-jf-Y7F" secondAttribute="bottom" constant="8" id="UBw-ad-B2k"/>
                                             <constraint firstItem="Ubi-cu-Lug" firstAttribute="centerY" secondItem="cEY-Bg-6U3" secondAttribute="centerY" id="cLt-Y2-lr5"/>
                                             <constraint firstItem="0yK-cf-Eol" firstAttribute="leading" secondItem="NPU-il-Jdu" secondAttribute="leading" constant="12" id="cry-xw-5Gg"/>
                                             <constraint firstAttribute="bottom" secondItem="cEY-Bg-6U3" secondAttribute="bottom" constant="5" id="ebm-2Z-vZn"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="y7o-qM-1En" secondAttribute="trailing" constant="25" id="glH-F7-Ss2"/>
                                             <constraint firstItem="xXH-jf-Y7F" firstAttribute="top" secondItem="NPU-il-Jdu" secondAttribute="top" constant="6" id="hrj-8C-l72"/>
                                             <constraint firstItem="xXH-jf-Y7F" firstAttribute="leading" secondItem="NPU-il-Jdu" secondAttribute="leading" constant="12" id="msB-Ma-WDa"/>
                                             <constraint firstItem="cEY-Bg-6U3" firstAttribute="leading" secondItem="NPU-il-Jdu" secondAttribute="leading" constant="7" id="uks-Gf-iDU"/>
@@ -96,6 +105,7 @@
                                             <outlet property="textLabel" destination="0yK-cf-Eol" id="AyR-yJ-p0c"/>
                                             <outlet property="upvoteButton" destination="cEY-Bg-6U3" id="sY5-x1-fHJ"/>
                                             <outlet property="upvotesLabel" destination="MwP-EA-XQA" id="otM-1v-hC2"/>
+                                            <outlet property="userIdLabel" destination="y7o-qM-1En" id="KGs-RN-ydk"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
